[tool.poetry]
name = "inflammation"
version = "1.0.0"
description = "Analyse patient inflammation data"
authors = ["HugoBioInf <naarutsu@outlook.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
